# rules_python

gazelle/: BUILD.bazel  generate.go  target.go
python/pip_install/: repositories.bzl
