load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

go_library(
     name = "gazelle_mod",
     srcs = [
         "configure.go",
         "fix.go",
         "generate.go",
         "kinds.go",
         "language.go",
         "parser.go",
         "resolve.go",
         "std_modules.go",
         "target.go",
     ],
     importpath = "github.com/bazelbuild/rules_python/gazelle",
     visibility = ["//visibility:public"],
     deps = [
         "//manifest",
         "//pythonconfig",
         "@bazel_gazelle//config:go_default_library",
         "@bazel_gazelle//label:go_default_library",
         "@bazel_gazelle//language:go_default_library",
         "@bazel_gazelle//repo:go_default_library",
         "@bazel_gazelle//resolve:go_default_library",
         "@bazel_gazelle//rule:go_default_library",
         "@com_github_bazelbuild_buildtools//build:go_default_library",
         "@com_github_bmatcuk_doublestar//:doublestar",
         "@com_github_emirpasic_gods//lists/singlylinkedlist",
         "@com_github_emirpasic_gods//sets/treeset",
         "@com_github_emirpasic_gods//utils",
         "@io_bazel_rules_go//go/tools/bazel:go_default_library",
     ],
 )


# Gazelle configuration options.
# See https://github.com/bazelbuild/bazel-gazelle#running-gazelle-with-bazel
# gazelle:prefix github.com/bazelbuild/rules_python/gazelle
# gazelle:exclude bazel-out
gazelle(name = "gazelle")

gazelle(
    name = "gazelle_update_repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%gazelle_deps",
        "-prune",
    ],
    command = "update-repos",
)

filegroup(
    name = "distribution",
    srcs = [
        ":BUILD.bazel",
        ":README.md",
        ":WORKSPACE",
        ":def.bzl",
        ":deps.bzl",
        ":go.mod",
        ":go.sum",
        "//manifest:distribution",
        "//modules_mapping:distribution",
        "//python:distribution",
        "//pythonconfig:distribution",
    ],
    visibility = ["@rules_python//:__pkg__"],
)
